Added some fixes before the demo

--- a/src/components/shared/Global/global.scss
+++ b/src/components/shared/Global/global.scss
@@ -114,3 +114,10 @@ a:hover{
 #tooltip:hover:before {
   display:block;
 }
+
+#globl{
+  width: 100%;
+  top: 0; right: 0;
+  position: absolute;
+  z-index: 192349234239492394923432;
+}
