--- a/src/components/pages/Dashboard/AddQuiz/AddQuiz.module.scss
+++ b/src/components/pages/Dashboard/AddQuiz/AddQuiz.module.scss
@@ -119,10 +119,10 @@
     transition: all ease-in-out 0.3s;
     cursor: pointer;
     user-select: none;
-}
 
-.navicon_wrapper:hover {
-    background: #e0d9f7;
+    &:hover {
+        background: rgba(141, 141, 141, 0.09);
+    }
 }
 
 .right_wrapper {
@@ -158,15 +158,17 @@
     width: 70%;
     height: 100%;
     word-wrap: break-word;
-
     font-size: 2.75em;
     text-align: center;
     overflow: hidden;
-    // font-family: "Integral CF Demi Bold";
     font-family: "Space Grotesk", sans-serif;
     font-weight: 500;
-
     border: 0;
+    transition: 0.3s ease-in-out all;
+
+    &::placeholder {
+        color: #33333350;
+    }
 }
 
 .option_active {
@@ -199,6 +201,11 @@
     border-radius: 0.75em;
     margin-bottom: 1%;
     border: 0.25px solid rgba(141, 141, 141, 0.085);
+    transition: 0.3s ease-in-out all;
+
+    &:hover {
+        border: 0.25px solid rgba(141, 141, 141, 0.4);
+    }
 }
 
 .option_input {
@@ -212,9 +219,22 @@
     font-family: "Space Grotesk", sans-serif;
     font-weight: 500;
     border: 0;
+    transition: 0.3s ease-in-out all;
+
+    &::placeholder {
+        color: #33333350;
+    }
+
+    &:active {
+        color: 0.25px solid rgba(141, 141, 141, 0.4);
+    }
+
+    &:hover {
+        color: 0.25px solid rgba(141, 141, 141, 0.4);
+    }
 }
 
-.option_check{
+.option_check {
     // border-left: 0.25px solid rgba(141, 141, 141, 0.085);
     width: 25%;
     height: 100%;
@@ -223,8 +243,8 @@
     align-items: center;
 }
 
-.option_check_icon{
-    fill: var(--purple)
+.option_check_icon {
+    fill: var(--purple);
 }
 
 ._container {
@@ -289,21 +309,21 @@
     border-bottom: 0.25px solid rgba(141, 141, 141, 0.085);
 }
 
-._form_wrapper{
+._form_wrapper {
     margin: 1em 0em;
 }
 
 ._form_label_name {
     margin-top: 1em;
-    margin-left: .5em;
-    font-size: .8em;
+    margin-left: 0.5em;
+    font-size: 0.8em;
     text-transform: uppercase;
     font-weight: bold;
 }
 
 ._form_input {
     width: 100%;
-    margin-top: .3em;
+    margin-top: 0.3em;
     font-family: "Space Grotesk", sans-serif;
     font-size: 1.15em;
     padding: 0.65em 0.75em;
@@ -322,4 +342,18 @@
     &:hover {
         background: #f1f1f130;
     }
+}
+
+.savingit {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 80%;
+    margin-left: 10%;
+    text-align: center;
+}
+
+.publishing_title {
+    font-family: "Integral CF Demi Bold";
 }
