--- a/src/components/pages/Dashboard_v2/pages/Quiz/Quiz.module.scss
+++ b/src/components/pages/Dashboard_v2/pages/Quiz/Quiz.module.scss
@@ -1,45 +1,34 @@
 .container {
     width: 100%;
     display: flex;
-
-    @media screen and (max-width: 1000px) {
-        padding: 2.5%;
-    }
+    height: 100vh;
+    flex-direction: column-reverse;
 }
 
 .slides {
-    width: 25%;
-    height: 100vh;
-    margin-left: -0.1em;
-    overflow-y: scroll;
-    border-right: 0.25px solid rgba(141, 141, 141, 0.085);
+    width: 100%;
+    height: 30vh;
+    border-top: 2px solid var(--border-color);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow-x: scroll;
 }
-
 
 .quiz_list {
     padding: 1em;
-}
-
-.miniheader {
-    width: 100%;
-    height: 7.5vh;
-    border-bottom: 0.25px solid rgba(141, 141, 141, 0.085);
     display: flex;
-    padding: 0;
-    justify-content: space-between;
-    justify-content: center;
-    align-items: center;
 }
 
 .single_slide {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100%;
-    height: 20vh;
+    width: 25%;
+    height: 80%;
     padding: 1em;
-    margin-bottom: 1em;
-    border: 0.25px solid rgba(141, 141, 141, 0.085);
+    margin-right: 1em;
+    border: 2px solid var(--border-color);
     border-radius: 0.75em;
     transition: all ease-in-out 0.3s;
 
@@ -48,6 +37,7 @@
     }
 
     position: relative;
+
 }
 
 .delete{
@@ -63,7 +53,7 @@
     height: 20%;
     padding: 1em;
     margin-bottom: 1em;
-    border: 0.25px solid rgba(141, 141, 141, 0.085);
+    border: 2px solid var(--border-color);
     border-radius: 0.75em;
     background: rgba(141, 141, 141, 0.085);
 }
@@ -74,7 +64,7 @@
     height: 20%;
     padding: 1em;
     margin-bottom: 1em;
-    border: 0.25px solid rgba(141, 141, 141, 0.085);
+    border: 2px solid var(--border-color);
     border-radius: 0.75em;
     display: flex;
     justify-content: center;
@@ -104,7 +94,7 @@
 .header {
     width: 100%;
     height: 7.5vh;
-    border-bottom: 0.25px solid rgba(141, 141, 141, 0.085);
+    border-bottom: 2px solid var(--border-color);
     display: flex;
     justify-content: space-between;
 }
@@ -139,7 +129,7 @@
 
 .current_slide {
     padding-top: 1%;
-    height: 100vh - 7.5vh;
+    height: 50vh - 7.5vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -153,7 +143,7 @@
     justify-content: center;
     align-items: center;
     border-radius: 0.75em;
-    border: 0.25px solid rgba(141, 141, 141, 0.085);
+    border: 2px solid var(--border-color);
     position: relative;
     word-wrap: break-word;
 }
@@ -169,7 +159,7 @@
     font-size: 2.75em;
     text-align: center;
     overflow: hidden;
-    font-family: "Space Grotesk", sans-serif;
+    font-family: "Poppins", sans-serif;
     font-weight: 500;
     border: 0;
     transition: 0.3s ease-in-out all;
@@ -208,7 +198,7 @@
     align-items: center;
     border-radius: 0.75em;
     margin-bottom: 1%;
-    border: 0.25px solid rgba(141, 141, 141, 0.085);
+    border: 2px solid var(--border-color);
     transition: 0.3s ease-in-out all;
 
     &:hover {
@@ -224,7 +214,7 @@
     text-align: center;
     font-size: 1.7em;
     word-wrap: break-word;
-    font-family: "Space Grotesk", sans-serif;
+    font-family: "Poppins", sans-serif;
     font-weight: 500;
     border: 0;
     transition: 0.3s ease-in-out all;
@@ -243,7 +233,7 @@
 }
 
 .option_check {
-    // border-left: 0.25px solid rgba(141, 141, 141, 0.085);
+    // border-left: 2px solid var(--border-color);
     width: 25%;
     height: 100%;
     display: flex;
@@ -277,7 +267,7 @@
     border-radius: 1em;
     position: relative;
     padding: 1em 1em;
-    border: 0.25px solid rgba(141, 141, 141, 0.085);
+    border: 2px solid var(--border-color);
 
     overflow: scroll;
 }
@@ -290,7 +280,7 @@
     border-radius: 1em;
     position: relative;
     padding: 1em 1em;
-    border: 0.25px solid rgba(141, 141, 141, 0.085);
+    border: 2px solid var(--border-color);
 
     overflow: scroll;
 }
@@ -314,7 +304,7 @@
 ._modal_title {
     font-size: 1.5em;
     padding-bottom: 0.5em;
-    border-bottom: 0.25px solid rgba(141, 141, 141, 0.085);
+    border-bottom: 2px solid var(--border-color);
 }
 
 ._form_wrapper {
@@ -332,7 +322,7 @@
 ._form_input {
     width: 100%;
     margin-top: 0.3em;
-    font-family: "Space Grotesk", sans-serif;
+    font-family: "Poppins", sans-serif;
     font-size: 1.15em;
     padding: 0.65em 0.75em;
     border-radius: 1em;
@@ -341,7 +331,7 @@
     transition: all ease-in-out 0.3s;
     cursor: pointer;
 
-    border: 0.25px solid rgba(141, 141, 141, 0.085);
+    border: 2px solid var(--border-color);
 
     &:active {
         border: 0.5px solid rgba(125, 99, 196, 0.314);
@@ -371,7 +361,7 @@
     padding: 1em 2.25em 1em 1em;
     border-radius: 0.85em;
     background: transparent;
-    border: 0.25px solid rgba(141, 141, 141, 0.085);
+    border: 2px solid var(--border-color);
     transition: .3s ease-in-out all;
     position: relative;
 
