New Dashboard + Quiz Crud Logic in React

--- a/src/components/pages/Dashboard_v2/Home/globals.scss
+++ b/src/components/pages/Dashboard_v2/Home/globals.scss
@@ -7,6 +7,7 @@
     --icon-inside: #A4ADB7;
     --icon-border: #151E28;
     --text-color: #151E28;
+    --border-active: #f3f3f3;
     --animate: .3456789s ease-in-out all;
 }
 
@@ -18,5 +19,6 @@
     --icon-inside: #9b9ea3 !important;
     --icon-border: #fff !important;
     --text-color: #f3f3f3;
+    --border-active: #f3f3f3;
     --animate: .3456789s ease-in-out all;
 }
