Big Update with Thumbnails, new Design and Operations.

--- a/src/components/shared/Global/global.scss
+++ b/src/components/shared/Global/global.scss
@@ -1,9 +1,32 @@
-:root {
+:root,
+#lightmode {
   --purple: #5928e5;
   --white: #fff;
-  ::-webkit-scrollbar {
-    width: 0px;
-  }
+  --background-less-important: #fcfcfc;
+  --background-important: #ffffff;
+  --border-color: #f3f3f3;
+  --hover-color: #f3f3f3;
+  --icon-inside: #a4adb7;
+  --icon-border: #151e28;
+  --text-color: #151e28;
+  --border-active: #f3f3f3;
+  --animate: 0.3456789s ease-in-out all;
+}
+
+#darkmode {
+  --background-less-important: #0d151d !important;
+  --background-important: #111b25 !important;
+  --border-color: #36424d !important; //#141d25
+  --hover-color: #263d5360 !important;
+  --icon-inside: #9b9ea3 !important;
+  --icon-border: #fff !important;
+  --text-color: #f3f3f3;
+  --border-active: #f3f3f3;
+  --animate: 0.3456789s ease-in-out all;
+}
+
+::-webkit-scrollbar {
+  width: 0px;
 }
 
 * {
@@ -12,7 +35,6 @@
   text-decoration: none;
   outline: none;
   box-sizing: border-box;
-  // overflow-x: hidden;
 }
 
 body {
@@ -20,8 +42,7 @@ body {
   background: var(--priamry);
   font-family: "Space Grotesk", sans-serif;
   scroll-behavior: smooth;
-  cursor: url('../../../assets/images/cursor.svg'), auto;
-
+  // cursor: url("../../../assets/images/cursor.svg"), auto;
 }
 
 #_VAR {
@@ -57,32 +78,32 @@ body {
   background-color: green;
 }
 
-#cursor_hover,
-#cursor_hover:hover,
-button,
-button:hover,
-a,
-input,
-input:hover,
-a:hover{
-  cursor: url('../../../assets/images/cursor_hover.svg'), auto;
-}
+// #cursor_hover,
+// #cursor_hover:hover,
+// button,
+// button:hover,
+// a,
+// input,
+// input:hover,
+// a:hover {
+//   cursor: url("../../../assets/images/cursor_hover.svg"), auto;
+// }
 
-::-webkit-scrollbar{
-  width: .25em;
+::-webkit-scrollbar {
+  width: 0.25em;
   height: 0px;
 }
 
-::-webkit-scrollbar-track{
+::-webkit-scrollbar-track {
   background: var(--white);
 }
 
-::-webkit-scrollbar-thumb{
+::-webkit-scrollbar-thumb {
   background: var(--purple);
   border-radius: 100px;
 }
 
-::-webkit-scrollbar-thumb:hover{
+::-webkit-scrollbar-thumb:hover {
   background: #5928e570;
 }
 
@@ -92,32 +113,33 @@ a:hover{
 
 #tooltip:before {
   content: attr(data-text); /* here's the magic */
-  position:absolute;
+  position: absolute;
 
-  top:50%;
-  transform:translateY(-50%);
+  top: 50%;
+  transform: translateY(-50%);
 
   width: auto;
-  left:100%;
-  margin-left: .5em; 
+  left: 100%;
+  margin-left: 0.5em;
 
   font-size: 1.19em;
-  padding: .5em .75em;
-  border-radius: .5em;
-  background:var(--purple);
+  padding: 0.5em 0.75em;
+  border-radius: 0.5em;
+  background: var(--purple);
   color: #fff;
-  text-align:center;
+  text-align: center;
 
-  display:none; /* hide by default */
+  display: none; /* hide by default */
 }
 
 #tooltip:hover:before {
-  display:block;
+  display: block;
 }
 
-#globl{
+#globl {
   width: 100%;
-  top: 0; right: 0;
+  top: 0;
+  right: 0;
   position: absolute;
   z-index: 192349234239492394923432;
 }
