New design + and some other logic

--- a/src/components/shared/Dashbar/Dashbar.module.scss
+++ b/src/components/shared/Dashbar/Dashbar.module.scss
@@ -52,6 +52,7 @@
     margin-bottom: 0.5em;
     transition: var(--animate);
     position: relative;
+    cursor: pointer;
 
     &:hover {
         background: var(--hover-color);
