--- a/src/components/pages/Dashboard/Profile/ProfilePage.scss
+++ b/src/components/pages/Dashboard/Profile/ProfilePage.scss
@@ -1,223 +1,244 @@
 .mainProfileCont {
-	width: 100%;
-	height: 100%;
-	display: flex;
-	justify-content: center;
-	position: relative;
-	flex-direction: column;
+  width: 100vw;
+  height: 100vh;
+  overflow-x: hidden;
+  margin: 0 auto;
 }
 
 .topProfileCont {
-	display: flex;
-	justify-content: center;
-	flex-direction: column;
-	margin: 0 auto;
-	& h2 {
-		font-family: "Integral CF";
-		color: #5928e5;
-		margin: 3rem 0 3rem 0;
-		text-align: left;
-		@media screen and (max-width: 900px) {
-			display: flex;
-			justify-content: center;
-			font-size: medium;
-		}
-	}
-}
-
-#coverPic {
-	width: 1350px;
-	border-radius: 10px;
-
-	@media screen and (max-width: 900px) {
-		width: 90%;
-		display: block;
-		margin: 0 auto;
-	}
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  & h2 {
+    margin: 0 auto;
+    font-family: "Integral CF";
+    color: #5928e5;
+    margin: 3rem 0 3rem 0;
+    text-align: left;
+    @media screen and (max-width: 900px) {
+      display: flex;
+      justify-content: center;
+      font-size: medium;
+    }
+  }
 }
 
 .bottomProfileCont {
-	display: flex;
-	flex-direction: row;
-	@media screen and (max-width: 900px) {
-		width: 100%;
-		display: flex;
-		flex-direction: column;
-	}
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  margin: 0 auto;
+  @media screen and (max-width: 900px) {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+  }
 }
 
 .leftBottomProfileCont {
-	width: 40%;
-	display: flex;
-	justify-content: center;
-	flex-direction: column;
-	align-items: center;
-	transform: translateY(-25%);
-	@media screen and (max-width: 900px) {
-		width: 100%;
-		display: flex;
-		justify-content: center;
-	}
-	& img {
-		width: 250px;
-		height: 250px;
-		border: 5px solid #5928e5;
-		border-radius: 50%;
-		margin-right: 5rem;
-		@media screen and (max-width: 900px) {
-			margin: 0;
-			width: 100px;
-			height: 100px;
-			transform: translateY(40%);
-			margin-bottom: 4em;
-		}
-	}
-	& h1 {
-		font-family: Integral CF;
-		color: #5928e5;
-		margin-top: 2rem;
-		align-self: flex-start;
-		margin-left: 13%;
-		@media screen and (max-width: 900px) {
-			font-size: medium;
-			margin-bottom: 5px;
-			margin: 0 auto;
-		}
-	}
-	& h4 {
-		font-weight: 500;
-		font-size: 12pt;
-		font-family: "Poppins";
-		align-self: flex-start;
-		margin-left: 13%;
-		@media screen and (max-width: 900px) {
-			font-size: 11pt;
-			margin-bottom: 1%;
-			margin: 0 auto;
-		}
-	}
-	& p {
-		width: 80%;
-		font-family: "Poppins";
-		align-self: flex-start;
-		margin-left: 13%;
-		@media screen and (max-width: 900px) {
-			text-align: justify;
-			font-size: small;
-		}
-	}
-	& button {
-		margin-top: 2rem;
-		font-family: Integral CF;
-		font-size: 10pt;
-		width: 80%;
-		@media screen and (max-width: 900px) {
-			width: 40%;
-			margin: 0 auto;
-			margin: 20px 0 50px 0;
-		}
-	}
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 0 auto;
+
+  @media screen and (max-width: 900px) {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+  }
+  & img {
+    width: 250px;
+    height: 250px;
+    border: 5px solid #5928e5;
+    border-radius: 50%;
+
+    @media screen and (max-width: 900px) {
+      margin: 0;
+      width: 100px;
+      height: 100px;
+      transform: translateY(40%);
+      margin-bottom: 4em;
+    }
+  }
+  & h1 {
+    font-family: Integral CF;
+    color: #5928e5;
+    margin-top: 2rem;
+    margin-bottom: 0.3rem;
+    @media screen and (max-width: 900px) {
+      font-size: medium;
+      margin-bottom: 5px;
+      margin: 0 auto;
+    }
+  }
+  & h4 {
+    font-weight: 500;
+    font-size: 12pt;
+    font-family: "Poppins";
+    margin-bottom: 0.3rem;
+    @media screen and (max-width: 900px) {
+      font-size: 11pt;
+      margin-bottom: 1%;
+      margin: 0 auto;
+    }
+  }
+  & p {
+    font-family: "Poppins";
+    margin-bottom: 0.5rem;
+    @media screen and (max-width: 900px) {
+      text-align: justify;
+      font-size: small;
+    }
+  }
+  & button {
+    width: 15%;
+    border: 0;
+    border-radius: 20px;
+    background-color: #5928e5;
+    color: #ffffff;
+    font-size: 12px;
+    font-weight: bold;
+    font-family: Integral CF;
+    padding: 12px 45px;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    transition: transform 80ms ease-in;
+    transition: 0.4s all ease;
+
+    &:active {
+      transform: scale(0.95);
+    }
+
+    &:focus {
+      outline: none;
+    }
+
+    &:hover {
+      cursor: pointer;
+      background-color: #8159ee;
+      transition: 0.4s ease;
+      letter-spacing: 2px;
+    }
+    @media screen and (max-width: 900px) {
+      width: 40%;
+      margin: 0 auto;
+      margin: 20px 0 50px 0;
+    }
+  }
 }
 
 .rightBottomProfileCont {
-	width: 70%;
-	display: flex;
-	justify-content: center;
-	flex-direction: column;
-	margin-right: -46px;
-	& h2 {
-		font-family: Integral CF;
-		margin: 1em 0 1em 4em;
-		@media screen and (max-width: 900px) {
-			display: flex;
-			justify-content: center;
-			font-size: medium;
-		}
-	}
+  width: 100%;
+  justify-content: center;
+  flex-direction: column;
+  & h2 {
+    font-family: Integral CF;
+    margin: 3em 0 1em 0;
+    padding-left: 15px;
+    @media screen and (max-width: 900px) {
+      display: flex;
+      justify-content: center;
+      font-size: medium;
+    }
+  }
 }
 
 #quizImage {
-	width: 250px;
-	border-radius: 15px;
-	@media screen and (max-width: 900px) {
-		width: 100px;
-		margin: 2% 0 0 30%;
-	}
+  width: 95%;
+  border-radius: 15px;
+  padding: 10;
+  @media screen and (max-width: 900px) {
+    width: 100px;
+    margin: 2% 0 0 30%;
+  }
 }
 
 .profileQuizes {
-	display: flex;
-	justify-content: start;
-	flex-flow: row wrap;
-	@media screen and (max-width: 900px) {
-		flex-direction: column;
-		width: 100%;
-		margin: 0 auto;
-		position: absolute;
-		top: 100%;
-	}
+  display: grid;
+  grid-template-columns: repeat(4, minmax(240px, 1fr));
+  margin: 0 auto;
+  padding: 15px;
+  @media screen and (max-width: 900px) {
+    flex-direction: column;
+    width: 100%;
+    margin: 0 auto;
+    top: 100%;
+  }
 }
 
 .QuizBody {
-	border: 0.5px solid gray;
-	border-radius: 15px;
-	margin-right: 0.5em;
-	@media screen and (max-width: 900px) {
-		justify-content: center;
-		margin: 0 auto;
-		margin-bottom: 20px;
+  border: 0.5px solid gray;
+  border-radius: 15px;
+  margin-right: 0.5em;
+  margin-bottom: 0.5em;
+  width: 80%;
 
-		& h3 {
-			font-size: medium;
-			margin-left: 10%;
-			margin-bottom: 5px;
-		}
-		&p {
-			font-size: small;
-		}
-	}
-	& h3 {
-		font-family: Integral CF;
-		color: #5928e5;
-		padding: 0 5px 0 5px;
-	}
-	& p {
-		width: 250px;
-		font-family: "Poppins";
-		font-size: 9pt;
-		padding: 0 5px 0 5px;
-	}
+  & img {
+    margin: 2%;
+  }
+
+  & h3 {
+    font-family: Integral CF;
+    color: #5928e5;
+    padding: 0 5px 0 5px;
+    width: 100%;
+    margin-bottom: 1em;
+  }
+  & p {
+    width: 100%;
+    font-family: "Poppins";
+    font-size: 9pt;
+    padding: 0 5px 0 5px;
+  }
+
+  @media screen and (max-width: 900px) {
+    justify-content: center;
+    margin: 0 auto;
+    margin-bottom: 20px;
+
+    & h3 {
+      font-size: medium;
+      margin-left: 10%;
+      margin-bottom: 5px;
+    }
+    &p {
+      font-size: small;
+    }
+  }
 }
 
 .quizBottom {
-	display: flex;
-	flex-direction: row;
-	margin: 50px 0 10px 0;
-	padding-left: 5px;
-	& img {
-		width: 40px;
-	}
-	.quizBottomRight {
-		display: flex;
-		flex-direction: column;
-		margin-left: 5px;
-		@media screen and (max-width: 900px) {
-			& #quizMadeBy {
-				font-size: small;
-			}
-			& h5 {
-				font-size: small;
-				padding-bottom: 5px;
-			}
-		}
+  display: flex;
+  flex-direction: row;
+  margin: 5% 0;
+  & img {
+    width: 40px;
+    border-radius: 50%;
+  }
+  .quizBottomRight {
+    display: flex;
+    flex-direction: column;
+    margin-left: 5px;
+    @media screen and (max-width: 900px) {
+      & #quizMadeBy {
+        font-size: small;
+      }
+      & h5 {
+        font-size: small;
+        padding-bottom: 5px;
+      }
+    }
 
-		& #quizMadeBy {
-			color: gray;
-			font-family: "Poppins";
-		}
-		& h5 {
-			color: #5928e5;
-			font-family: Integral CF;
-		}
-	}
+    & #quizMadeBy {
+      color: gray;
+      font-family: "Poppins";
+      margin-top: 7%;
+    }
+    & h5 {
+      color: #5928e5;
+      font-family: Integral CF;
+    }
+  }
 }
